--- a/package.json
+++ b/package.json
@@ -11,24 +11,17 @@
   ],
   "main": "index.js",
   "scripts": {
-    "test": "mocha --compilers js:babel-register"
+    "test": "mocha"
   },
   "dependencies": {
     "cheerio": "^0.20.0",
-    "foundation-emails": "^2.2.0",
-    "mkdirp": "^0.5.1",
-    "multiline": "^1.0.2",
-    "object-values": "^1.0.0",
     "through2": "^2.0.0",
     "vinyl-fs": "^2.3.0"
   },
   "devDependencies": {
     "assert-html-equal": "^1.0.0",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-register": "^6.4.3",
-    "chalk": "^1.1.1",
-    "mocha": "^2.4.5",
-    "rimraf": "^2.5.1"
+    "mocha": "^6.2.2",
+    "rimraf": "^3.0.0"
   },
   "repository": "https://github.com/zurb/inky.git",
   "bugs": "https://github.com/zurb/inky/issues",
