--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "test": "mocha"
   },
   "dependencies": {
-    "cheerio": "^0.20.0",
-    "through2": "^2.0.0",
-    "vinyl-fs": "^2.3.0"
+    "cheerio": "^1.0.0-rc.3",
+    "through2": "^3.0.1",
+    "vinyl-fs": "^3.0.3"
   },
   "devDependencies": {
     "assert-html-equal": "^1.0.0",
