--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test": "mocha"
   },
   "dependencies": {
-    "cheerio": "^1.0.0-rc.3",
+    "cheerio": "^0.22.0",
     "through2": "^3.0.1",
     "vinyl-fs": "^3.0.3"
   },
